internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-dns-cluster.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
